--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/UniverseTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/UniverseTemplate.vm
@@ -2,13 +2,13 @@ package ${context.metaModelPackage};
 
 public class ${context.metaModelName}Universe extends org.kevoree.modeling.api.abs.AbstractKUniverse<${context.metaModelName}View, ${context.metaModelName}Universe, ${context.metaModelName}Model> {
 
-    protected ${context.metaModelName}Universe(org.kevoree.modeling.api.KModel p_model, long key) {
-        super(p_model, key);
+    protected ${context.metaModelName}Universe(long p_key, org.kevoree.modeling.api.data.manager.KDataManager p_manager) {
+        super(p_key, p_manager);
     }
 
     @Override
     protected ${context.metaModelName}View internal_create(long timePoint) {
-        return new ${context.metaModelPackage}.impl.${context.metaModelName}ViewImpl(timePoint,(org.kevoree.modeling.api.abs.AbstractKUniverse)this);
+        return new ${context.metaModelPackage}.impl.${context.metaModelName}ViewImpl(_universe, timePoint, _manager);
     }
 
 }
