--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaClassTemplate2.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaClassTemplate2.vm
@@ -27,11 +27,7 @@ public static final org.kevoree.modeling.api.meta.MetaAttribute ATT_${attribute.
 #end
 
 #foreach($reference in $classDeclaration.references)
-#if($context.generationContext.helper.isNull(${reference.opposite}))
-public static final org.kevoree.modeling.api.meta.MetaReference REF_${reference.name.toUpperCase()} = new org.kevoree.modeling.api.abs.AbstractMetaReference("${reference.name}", ${reference.index}, ${reference.contained}, ${reference.single}, new org.kevoree.modeling.api.abs.LazyResolver() {@Override public org.kevoree.modeling.api.meta.Meta meta() {return ${reference.type.pack}.meta.Meta${reference.type.name}.getInstance();}}, null,new org.kevoree.modeling.api.abs.LazyResolver() {@Override public org.kevoree.modeling.api.meta.Meta meta() {return ${classDeclaration.pack}.meta.Meta${classDeclaration.name}.getInstance();}});
-#else
-public static final org.kevoree.modeling.api.meta.MetaReference REF_${reference.name.toUpperCase()} = new org.kevoree.modeling.api.abs.AbstractMetaReference("${reference.name}", ${reference.index}, ${reference.contained}, ${reference.single}, new org.kevoree.modeling.api.abs.LazyResolver() {@Override public org.kevoree.modeling.api.meta.Meta meta() {return ${reference.type.pack}.meta.Meta${reference.type.name}.getInstance();}}, new org.kevoree.modeling.api.abs.LazyResolver() {@Override public org.kevoree.modeling.api.meta.Meta meta() {return ${reference.type.pack}.meta.Meta${reference.type.name}.REF_${reference.opposite.name.toUpperCase()};}},new org.kevoree.modeling.api.abs.LazyResolver() {@Override public org.kevoree.modeling.api.meta.Meta meta() {return ${classDeclaration.pack}.meta.Meta${classDeclaration.name}.getInstance();}});
-#end
+public static final org.kevoree.modeling.api.meta.MetaReference REF_${reference.name.toUpperCase()} = new org.kevoree.modeling.api.abs.AbstractMetaReference("${reference.name}", ${reference.index}, ${reference.visible}, ${reference.single}, new org.kevoree.modeling.api.abs.LazyResolver() {@Override public org.kevoree.modeling.api.meta.Meta meta() {return ${reference.type.pack}.meta.Meta${reference.type.name}.getInstance();}},"${reference.opposite.name}",new org.kevoree.modeling.api.abs.LazyResolver() {@Override public org.kevoree.modeling.api.meta.Meta meta() {return ${classDeclaration.pack}.meta.Meta${classDeclaration.name}.getInstance();}});
 #end
 
 #foreach($operation in $classDeclaration.operations)
