--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassTemplate.vm
@@ -1,7 +1,7 @@
 #set($classDeclaration = $context.classDeclaration)
 package ${classDeclaration.pack};
 
-public interface ${classDeclaration.name} extends org.kevoree.modeling.api.KObject#foreach($parent in $classDeclaration.parents), $parent.getFqn()#end {
+public interface ${classDeclaration.name} extends org.kevoree.modeling.KObject#foreach($parent in $classDeclaration.parents), $parent.getFqn()#end {
 
 #foreach($attribute in $classDeclaration.attributes)
 #if($attribute.single)
@@ -10,7 +10,7 @@ public interface ${classDeclaration.name} extends org.kevoree.modeling.api.KObje
 #{else}
     public ${classDeclaration.pack}.${classDeclaration.name} add${context.generationContext.helper.toCamelCase($attribute.getName())}($context.generationContext.getHelper().convertToJavaType(${attribute.getType()}) p_obj);
     public ${classDeclaration.pack}.${classDeclaration.name} remove${context.generationContext.helper.toCamelCase($attribute.getName())}($context.generationContext.getHelper().convertToJavaType(${attribute.getType()}) p_obj);
-    public void each${context.generationContext.helper.toCamelCase($attribute.getName())}(org.kevoree.modeling.api.Callback<${context.generationContext.getHelper().convertToJavaType(${attribute.getType()})}[]> p_callback);
+    public void each${context.generationContext.helper.toCamelCase($attribute.getName())}(org.kevoree.modeling.Callback<${context.generationContext.getHelper().convertToJavaType(${attribute.getType()})}[]> p_callback);
 #end
 #end
 
@@ -18,18 +18,18 @@ public interface ${classDeclaration.name} extends org.kevoree.modeling.api.KObje
 #if($rel.visible)
 #if($rel.single)
     public ${classDeclaration.pack}.${classDeclaration.name} set${context.generationContext.helper.toCamelCase($rel.getName())}($rel.getType().fqn p_obj);
-    public void get${context.generationContext.helper.toCamelCase($rel.getName())}(org.kevoree.modeling.api.Callback<${rel.getType().fqn}> cb);
+    public void get${context.generationContext.helper.toCamelCase($rel.getName())}(org.kevoree.modeling.Callback<${rel.getType().fqn}> cb);
 #{else}
     public ${classDeclaration.pack}.${classDeclaration.name} add${context.generationContext.helper.toCamelCase($rel.getName())}($rel.getType().fqn p_obj);
     public ${classDeclaration.pack}.${classDeclaration.name} remove${context.generationContext.helper.toCamelCase($rel.getName())}($rel.getType().fqn p_obj);
-    public void get${context.generationContext.helper.toCamelCase($rel.getName())}(org.kevoree.modeling.api.Callback<${rel.getType().fqn}[]> cb);
+    public void get${context.generationContext.helper.toCamelCase($rel.getName())}(org.kevoree.modeling.Callback<${rel.getType().fqn}[]> cb);
     public int sizeOf${context.generationContext.helper.toCamelCase($rel.getName())}();
 #end
 #end
 #end
 
 #foreach($operation in $classDeclaration.operations)
-    public void ${operation.name}(#foreach($p in $operation.inputParams)$p.type $p.name, #{end}org.kevoree.modeling.api.Callback<#if(${operation.returnParam})$operation.returnParam.type#{else}Boolean#end> result);
+    public void ${operation.name}(#foreach($p in $operation.inputParams)$p.type $p.name, #{end}org.kevoree.modeling.Callback<#if(${operation.returnParam})$operation.returnParam.type#{else}Boolean#end> result);
 #end
 
 }
