--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaClassTemplate2.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaClassTemplate2.vm
@@ -1,7 +1,7 @@
 #set($classDeclaration = $context.classDeclaration)
 package ${classDeclaration.pack}.meta;
 
-public class Meta${classDeclaration.name} extends org.kevoree.modeling.api.abs.AbstractMetaClass {
+public class Meta${classDeclaration.name} extends org.kevoree.modeling.abs.AbstractMetaClass {
 
 private static Meta${classDeclaration.name} INSTANCE = null;
 
@@ -14,40 +14,40 @@ public static Meta${classDeclaration.name} getInstance() {
 
 #foreach($attribute in $classDeclaration.attributes)
 #if(${context.generationContext.getHelper().getInstance().isPrimitive(${attribute.getType()})})
-    #set($attTypeValue = "org.kevoree.modeling.api.meta.PrimitiveTypes.$attribute.getType().toUpperCase()")
+    #set($attTypeValue = "org.kevoree.modeling.meta.PrimitiveTypes.$attribute.getType().toUpperCase()")
 #else
     #set($substringIndex = ${attribute.getType().lastIndexOf('.')} + 1)
     #set($attTypeValue = "${classDeclaration.pack}.meta.Meta${attribute.getType().substring($substringIndex)}.getInstance()")
 #end
 #if($context.generationContext.helper.isNull($attribute.precision))
-public static final org.kevoree.modeling.api.meta.MetaAttribute ATT_${attribute.name.toUpperCase()} = new org.kevoree.modeling.api.abs.AbstractMetaAttribute("${attribute.name}", ${attribute.index}, 0, #if($attribute.id)true#{else}false#end, $attTypeValue, org.kevoree.modeling.api.extrapolation.DiscreteExtrapolation.instance());
+public static final org.kevoree.modeling.meta.MetaAttribute ATT_${attribute.name.toUpperCase()} = new org.kevoree.modeling.abs.AbstractMetaAttribute("${attribute.name}", ${attribute.index}, 0, #if($attribute.id)true#{else}false#end, $attTypeValue, org.kevoree.modeling.extrapolation.DiscreteExtrapolation.instance());
 #else
-public static final org.kevoree.modeling.api.meta.MetaAttribute ATT_${attribute.name.toUpperCase()} = new org.kevoree.modeling.api.abs.AbstractMetaAttribute("${attribute.name}", ${attribute.index}, #if($context.generationContext.helper.isNull(${attribute.precision}))0#{else}$attribute.precision#end, #if($attribute.id)true#{else}false#end, $attTypeValue, org.kevoree.modeling.api.extrapolation.PolynomialExtrapolation.instance());
+public static final org.kevoree.modeling.meta.MetaAttribute ATT_${attribute.name.toUpperCase()} = new org.kevoree.modeling.abs.AbstractMetaAttribute("${attribute.name}", ${attribute.index}, #if($context.generationContext.helper.isNull(${attribute.precision}))0#{else}$attribute.precision#end, #if($attribute.id)true#{else}false#end, $attTypeValue, org.kevoree.modeling.extrapolation.PolynomialExtrapolation.instance());
 #end
 #end
 
 #foreach($reference in $classDeclaration.references)
-public static final org.kevoree.modeling.api.meta.MetaReference REF_${reference.name.toUpperCase()} = new org.kevoree.modeling.api.abs.AbstractMetaReference("${reference.name}", ${reference.index}, ${reference.visible}, ${reference.single}, new org.kevoree.modeling.api.abs.LazyResolver() {@Override public org.kevoree.modeling.api.meta.Meta meta() {return ${reference.type.pack}.meta.Meta${reference.type.name}.getInstance();}},"${reference.opposite.name}",new org.kevoree.modeling.api.abs.LazyResolver() {@Override public org.kevoree.modeling.api.meta.Meta meta() {return ${classDeclaration.pack}.meta.Meta${classDeclaration.name}.getInstance();}});
+public static final org.kevoree.modeling.meta.MetaReference REF_${reference.name.toUpperCase()} = new org.kevoree.modeling.abs.AbstractMetaReference("${reference.name}", ${reference.index}, ${reference.visible}, ${reference.single}, new org.kevoree.modeling.abs.LazyResolver() {@Override public org.kevoree.modeling.meta.Meta meta() {return ${reference.type.pack}.meta.Meta${reference.type.name}.getInstance();}},"${reference.opposite.name}",new org.kevoree.modeling.abs.LazyResolver() {@Override public org.kevoree.modeling.meta.Meta meta() {return ${classDeclaration.pack}.meta.Meta${classDeclaration.name}.getInstance();}});
 #end
 
 #foreach($operation in $classDeclaration.operations)
-public static final org.kevoree.modeling.api.meta.MetaOperation OP_${operation.name.toUpperCase()} = new org.kevoree.modeling.api.abs.AbstractMetaOperation("${operation.name}", ${operation.index},new org.kevoree.modeling.api.abs.LazyResolver() {@Override public org.kevoree.modeling.api.meta.Meta meta() {return ${classDeclaration.pack}.meta.Meta${classDeclaration.name}.getInstance();}});
+public static final org.kevoree.modeling.meta.MetaOperation OP_${operation.name.toUpperCase()} = new org.kevoree.modeling.abs.AbstractMetaOperation("${operation.name}", ${operation.index},new org.kevoree.modeling.abs.LazyResolver() {@Override public org.kevoree.modeling.meta.Meta meta() {return ${classDeclaration.pack}.meta.Meta${classDeclaration.name}.getInstance();}});
 #end
 
     private Meta${classDeclaration.name}() {
         super("${classDeclaration.fqn}", ${classDeclaration.index});
-        org.kevoree.modeling.api.meta.Meta[] temp_all = new org.kevoree.modeling.api.meta.Meta[${classDeclaration.attributes.size()}+${classDeclaration.references.size()}+${classDeclaration.operations.size()}];
+        org.kevoree.modeling.meta.Meta[] temp_all = new org.kevoree.modeling.meta.Meta[${classDeclaration.attributes.size()}+${classDeclaration.references.size()}+${classDeclaration.operations.size()}];
 #set($i = 0)
 #foreach($attribute in $classDeclaration.attributes)
         temp_all[${i}] = ATT_${attribute.name.toUpperCase()};
     #set($i = $i +1)
 #end
-        org.kevoree.modeling.api.meta.MetaReference[] temp_references = new org.kevoree.modeling.api.meta.MetaReference[${classDeclaration.references.size()}];
+        org.kevoree.modeling.meta.MetaReference[] temp_references = new org.kevoree.modeling.meta.MetaReference[${classDeclaration.references.size()}];
 #foreach($reference in $classDeclaration.references)
         temp_all[${i}] = REF_${reference.name.toUpperCase()};
     #set($i = $i +1)
 #end
-        org.kevoree.modeling.api.meta.MetaOperation[] temp_operations = new org.kevoree.modeling.api.meta.MetaOperation[${classDeclaration.operations.size()}];
+        org.kevoree.modeling.meta.MetaOperation[] temp_operations = new org.kevoree.modeling.meta.MetaOperation[${classDeclaration.operations.size()}];
 #foreach($operation in $classDeclaration.operations)
         temp_all[${i}] = OP_${operation.name.toUpperCase()};
     #set($i = $i +1)
