--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaEnumTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaEnumTemplate.vm
@@ -1,6 +1,6 @@
 package ${context.pack}.meta;
 
-public class Meta${context.getName()} extends org.kevoree.modeling.api.abs.AbstractKDataType {
+public class Meta${context.getName()} extends org.kevoree.modeling.abs.AbstractKDataType {
 
     private Meta${context.getName()}(String p_name, boolean p_isEnum) {
         super(p_name, p_isEnum);
