--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/UniverseTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/UniverseTemplate.vm
@@ -1,8 +1,8 @@
 package ${context.metaModelPackage};
 
-public class ${context.metaModelName}Universe extends org.kevoree.modeling.api.abs.AbstractKUniverse<${context.metaModelName}View, ${context.metaModelName}Universe, ${context.metaModelName}Model> {
+public class ${context.metaModelName}Universe extends org.kevoree.modeling.abs.AbstractKUniverse<${context.metaModelName}View, ${context.metaModelName}Universe, ${context.metaModelName}Model> {
 
-    protected ${context.metaModelName}Universe(long p_key, org.kevoree.modeling.api.data.manager.KDataManager p_manager) {
+    protected ${context.metaModelName}Universe(long p_key, org.kevoree.modeling.data.manager.KDataManager p_manager) {
         super(p_key, p_manager);
     }
 
