--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ViewTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ViewTemplate.vm
@@ -1,6 +1,6 @@
 package $context.metaModelPackage;
 
-public interface ${context.metaModelName}View extends org.kevoree.modeling.api.KView {
+public interface ${context.metaModelName}View extends org.kevoree.modeling.KView {
 
 #foreach($class in $context.model.getClasses())
 #set($lastIdx = $class.fqn.lastIndexOf(".")+1)
