--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ModelTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ModelTemplate.vm
@@ -35,10 +35,10 @@ public class ${context.metaModelName}Model extends org.kevoree.modeling.abs.Abst
     switch (p_clazz.index()) {
     #foreach($class in $context.model.getClasses())
             #set($lastIdx = $class.fqn.lastIndexOf(".")+1)
-        case${class.index} : return new ${class.fqn.substring(0,$class.fqn.lastIndexOf("."))}
-        .impl.${class.fqn.substring($lastIdx)}Impl(universe, time, uuid, p_clazz, _manager);
+            case${class.index} : return new ${class.fqn.substring(0,$class.fqn.lastIndexOf("."))}
+            .impl.${class.fqn.substring($lastIdx)}Impl(universe, time, uuid, p_clazz, _manager);
         #end
-    default : return new org.kevoree.modeling.reflexive.DynamicKObject(universe, time, uuid, p_clazz, _manager);
+    default : return new org.kevoree.modeling.meta.reflexive.DynamicKObject(universe, time, uuid, p_clazz, _manager);
     }
     }
 
