--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ModelTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ModelTemplate.vm
@@ -7,23 +7,22 @@ public class ${context.metaModelName}Model extends org.kevoree.modeling.abs.Abst
 
     public ${context.metaModelName}Model() {
     super();
-    _metaModel = new org.kevoree.modeling.abs.AbstractMetaModel("${context.metaModelName}", -1);
-    org.kevoree.modeling.meta.MetaClass[] tempMetaClasses = new
-        org.kevoree.modeling.meta.MetaClass[${context.model.getClasses().size()}];
+    _metaModel = new org.kevoree.modeling.meta.impl.MetaModel("${context.metaModelName}");
+    org.kevoree.modeling.meta.KMetaClass[] tempMetaClasses = new org.kevoree.modeling.meta.KMetaClass[${context.model.getClasses().size()}];
     #foreach($class in $context.model.getClasses())
             tempMetaClasses[${class.index}] = ${class.pack}.meta.Meta${class.name}.getInstance();
         #end
-    ((org.kevoree.modeling.abs.AbstractMetaModel) _metaModel).init(tempMetaClasses);
+    ((org.kevoree.modeling.meta.impl.MetaModel) _metaModel).init(tempMetaClasses);
     }
 
     @Override
     protected ${context.metaModelName}Universe internalCreateUniverse(long key) {
-    return new ${context.metaModelName}Universe(key,_manager);
+        return new ${context.metaModelName}Universe(key,_manager);
     }
 
     @Override
     public org.kevoree.modeling.meta.KMetaModel metaModel() {
-    return _metaModel;
+        return _metaModel;
     }
 
     @Override
@@ -35,10 +34,9 @@ public class ${context.metaModelName}Model extends org.kevoree.modeling.abs.Abst
     switch (p_clazz.index()) {
     #foreach($class in $context.model.getClasses())
             #set($lastIdx = $class.fqn.lastIndexOf(".")+1)
-            case${class.index} : return new ${class.fqn.substring(0,$class.fqn.lastIndexOf("."))}
-            .impl.${class.fqn.substring($lastIdx)}Impl(universe, time, uuid, p_clazz, _manager);
+            case ${class.index} : return new ${class.fqn.substring(0,$class.fqn.lastIndexOf("."))}.impl.${class.fqn.substring($lastIdx)}Impl(universe, time, uuid, p_clazz, _manager);
         #end
-    default : return new org.kevoree.modeling.meta.dynamic.DynamicKObject(universe, time, uuid, p_clazz, _manager);
+    default : return new org.kevoree.modeling.meta.impl.GenericObject(universe, time, uuid, p_clazz, _manager);
     }
     }
 
@@ -46,7 +44,7 @@ public class ${context.metaModelName}Model extends org.kevoree.modeling.abs.Abst
             #set($lastIdx = $class.fqn.lastIndexOf(".")+1)
 
         public $class.fqn create$class.fqn.substring($lastIdx)(long universe,long time) {
-        return ($class.fqn) this.create(${class.pack}.meta.Meta${class.name}.getInstance(), universe, time);
+            return ($class.fqn) this.create(${class.pack}.meta.Meta${class.name}.getInstance(), universe, time);
         }
         #end
 
